Deployment.yaml
Description:>
  Imagine that we created a pod/app one year ago and then after a year we decided to upgrade the pod to v2.
  1. Can we update app with zero downtime?
  2. if multiple replicas are present can we update one after other sequentially? rolling updates.
  3. Can we pause the upgrade process and resume after testing?
  4. Can we fall back to previous version if the v2 has errors? rollback.
  The answer to above questions is Deployments.
  Deployment types: Recreate[shutdown v1 pods and then starts deplying v2, results in app downtime], Rolling
  updates[updates one after the other, first version B pod will be created and when it is ready to take the traffic,
  one pod of version A is taken down. It is the default update strategy in k8s], Canary [first update more than one instance, 
  do testing and then update the remaining, then when version B is ready takedown version A], Blue/Green[exactly same number of
  instances of version B are created and traffic is switched at the loadbalancer level when testing is done]
  
  
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    type: nginx-app
spec:
  replicas: 3
  selectors:
    matchLables: 
      name: nginx-app
  template:
    metadata:
      name: nginx-pod
      labels:
        type: nginx-app
    spec:
      containers:
        - name: nginx
          image: nginx
