pod_node_mount_volume.yaml
description:>
  In kubernetes the pods are transient in nature i.e if the pod is deleted then all the data
  generated by the pod also gets deleted. In order to persist the data generated by the pod
  we can mount the pod data path directly on to the node. 
  Note: This direct node mounts is not suitable in multinode setup because the pods expect to
  find the mount directory in all the nodes which is not very feasible.
  lets see how we can create the pod node mount


---
apiVersion: v1
kind: Pod
metadata:
  name: random-number-generatot
spec:
  volumes:
  - name: data-volume
    hostPath: 
    path: /data
    type: Directory
  containers:
  - image: alpine
    name: alpine
    command: ["/bin/bash", "-c"]
    args: ["shuf -i 0-100 -n 1 >> /opt/number.out;"]
    volumeMounts:
    - mountPath: /opt
      name: data-volume
